--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,20 @@ h1 {
 }
 
 .score {
-    background-color: black;
-    padding: 25px 50px 0px 50px;
-    max-width: max-content;
+    margin: 20px auto;
+    text-align: center;
     font-family: Scoreboard;
     color: #F94F6D;
     font-size: 100;
-    margin: 25px auto;
+    width: fit-content;
+    height: fit-content;
+    padding: 25px 0px 10px 0px;
+}
 
+.score-background{
+    margin: 25px auto;
+    background-color: black;
+    width: 210;
 }
 
 .button-collection{
