--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
     border: 5px solid #F94F6D;
     border-radius: 10px;
     max-width: 600px;
-    margin: 0px auto 0px auto;
+    height: 415px;
+    margin: 30px auto 0px auto;
     display: flex;
     justify-content: space-around;
 }
@@ -26,6 +27,14 @@ h1 {
     text-align: center;
     color: white;
     margin: 0px;
+}
+
+.dot{
+    background-color: yellow;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    margin: 25px 100px 0px 100px;
 }
 
 .score {
@@ -59,4 +68,17 @@ button {
     background: transparent;
     border: 2px solid #9AABD8;
     margin: 0px 5px 0px 5px;
+}
+
+#reset-btn{
+    background-color: #1B244A;
+    border: 5px solid #F94F6D;
+    font-size: 30px;
+    margin: 30px;
+    padding: 10px 20px;
+}
+
+#btn {
+    display: flex;
+    justify-content: center;
 }
